2011-01-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Add support for opcode 99, DUP_TOPX
	* test/expected/test_DUP_TOPX:
	* test/input/test_DUP_TOPX.py:
	* test/test_pychecker_CodeChecks.py:
	  Add a test for it.

2010-12-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Rework confusing addMethod method such that instead of mixing
	  method and methodName and doing confusing checks and asserts,
	  the name is always passed, and optionally the method.
	  In the third case where it was used, a name was always passed,
	  hence the second argument wasn't even used; so drop it.

2010-12-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* TODO:
	  Add a TODO item.
	* test/test_pychecker_function.py:
	  Add a unit test for function.Function
	  Add a surprising result for co_varnames for generators.

2010-12-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	* pychecker/function.py:
	* pychecker/pcmodules.py:
	* pychecker/warn.py:
	  Documentation, comments, and PEP-8.

2010-12-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/test_global.py:
	  Add a test for globals, same as test13.
	* test/input/test_global.py:
	  Test it without and with -g as the test input says.
	* test/expected/test_global:
	* test/expected/test_global_g:
	  Expected outputs in both cases.

2010-12-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/common.py:
	  Add underscored arguments to expected file name, so that we can
	  run the same input file with more than one argument.
	* test/expected/test_zope_interface:
	* test/expected/test_zope_interface_q:
	  Renamed now that args are encoded in filename.

2010-12-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* TODO:
	* test_expected/test13:
	  For some reason the expected output was warning about the second
	  occurrence of each global, not the first.  So the expected output