@@ -1,3 +1,9 @@
+2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* pychecker/warn.py:
+	  Add debug output to list number of modules and number of
+	  warnings found.
+
 2011-01-05  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* pychecker/CodeChecks.py:
